# unified-icc

./: .gitignore  LICENSE  README.md  config.example.yaml  dev-design.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
design/: module-adapter-layer.md  module-api-server.md  module-card-renderer.md  module-feishu-frontend.md  module-gateway-core.md  module-mvp.md  module-providers.md  module-session-lifecycle.md  module-session-monitor.md  module-state-persistence.md  module-tmux-manager.md
docs/: api.md  architecture.md  architecture.rst  conf.py  configuration.rst  contributing.rst  extending.md  getting-started.md  index.rst  providers.md  troubleshooting.md  troubleshooting.rst
docs/_static/: custom.css
docs/api-reference/: adapter.rst  call-stacks.rst  channel-router.rst  cli.rst  errors.rst  events.rst  gateway.rst  index.rst  rest.rst  server-lifecycle.rst  websocket.rst
docs/en/: adapter.rst  architecture.rst  call-stacks.rst  channel-router.rst  configuration.rst  contributing.rst  events.rst  first-steps.rst  gateway.rst  index.rst  installation.rst  troubleshooting.rst
docs/events/: index.rst
docs/getting-started/: first-steps.rst  index.rst  installation.rst
docs/providers/: index.rst
docs/zh/: configuration.rst  contributing.rst  index.rst
src/unified_icc/: __init__.py  adapter.py  cc_commands.py  channel_router.py  claude_task_state.py  config.py  event_reader.py  event_types.py  expandable_quote.py  gateway.py  hook.py  idle_tracker.py  mailbox.py  monitor_events.py  monitor_state.py  screen_buffer.py  session.py  session_lifecycle.py  session_map.py  session_monitor.py  state_persistence.py  terminal_parser.py  tmux_manager.py  topic_state_registry.py  transcript_parser.py  transcript_reader.py  user_preferences.py  utils.py  window_resolver.py  window_state_store.py  window_view.py
tests/: conftest.py
tests/e2e/: conftest.py  test_4_bots.py  test_feishu_channel.py
(+97 files in other folders)
